Fixed horizontal scrolling error

--- a/src/scenes/FooterScreen/FooterScreen.scss
+++ b/src/scenes/FooterScreen/FooterScreen.scss
@@ -7,6 +7,7 @@ footer {
   position: relative;
   height: 1085px;
   background-size: cover !important;
+  overflow: hidden;
 
   .footer-top-gradient {
     position: absolute;
