--- a/src/scenes/LandingScreen/LandingScreen.scss
+++ b/src/scenes/LandingScreen/LandingScreen.scss
@@ -7,6 +7,7 @@
   position: relative;
   background-size: cover !important;
   background-repeat: no-repeat;
+  overflow: hidden;
 
   .landing-screen-signature {
     position: absolute;
